--- a/src/main/resources/mmall.properties
+++ b/src/main/resources/mmall.properties
@@ -4,7 +4,7 @@ ftp.user=qinfen
 ftp.pass=qinfen
 ftp.server.http.prefix=http://img.happymmall.com/
 
-
+#支付宝支付回调URL
 alipay.callback.url=http://www.happymmall.com/order/alipay_callback.do
 
 password.salt = geelysdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
